--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <h2><a href="./public/movie-ranking.html">Moive Ranking</a></h2>
     <img src="./assets/images/movie-rankin.png" alt="A screenshot of project moive ranking" height="150"  />
+    <hr/>
+    <a href="./public/contact.html">Contact Me</a>
+    <a href="./public/about.html">About Me</a>
 </body>
 </html>
 
